--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Editable Resume</title>
     <link rel="stylesheet" href="syle.css">
 </head>
 <body>
-    <h1>Dynamic Resume Builder</h1>
+    <h1>Editable Resume Builder</h1>
     <form id="resume-form"> <fieldset>
         <legend>
             Personal Information
@@ -37,7 +37,7 @@
     <button type="submit">Generate Resume</button>
 </form>
    <br>
-   <div id="resume-display" ></div>
+   <div id="resume-display" contenteditable="true"></div>
    <script src="script.js"></script>
 </body>
 </html>
